--- a/package.json
+++ b/package.json
@@ -8,6 +8,6 @@
         "matrix-bot-sdk": "0.5.18"
     },
     "scripts": {
-        "start": "node main.js"
+        "start": "node build/main.js"
     }
 }
