--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "private": true,
     "main": "main.js",
     "dependencies": {
-        "matrix-bot-sdk": "^0.6.2",
+        "matrix-bot-sdk": "0.5.18",
         "typescript": "^4.8.3"
     },
     "scripts": {
