--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "description": "A Matrix bot that uses UDP to communicate to another device like the esp32.",
     "version": "1.0.1",
     "private": true,
-    "main": "main.js",
+    "main": "build/main.js",
     "dependencies": {
         "matrix-bot-sdk": "0.5.18",
         "typescript": "^4.8.3"
