--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
     },
     "scripts": {
         "start": "node build/main.js",
-        "build": "tsc -p tsconfig.json"
+        "build": "npx tsc -p tsconfig.json"
     }
 }
