--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "private": true,
     "main": "build/main.js",
     "dependencies": {
-        "matrix-bot-sdk": "0.5.18"
+        "matrix-bot-sdk": "^0.6.2"
     },
     "devDependencies": {
         "typescript": "^4.8.3"
