--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.7'
 services: 
   bot:
-    image: bot:develop
+    image: bot:1.0.1
     ports: 
       - "50000:50000/udp"
     volumes: 
